terraform/modules/istio/authz/authz/backend-allow.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-backend-metrics
  namespace: prod 
spec:
  selector:
    matchLabels:
      app: backend 
  action: ALLOW
  rules:
  - to:
    - operation:
        paths: ["/metrics*"]
